<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.savethefood.shared.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chef_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:transitionName="chef_imageview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_food" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/login_bck"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chef_imageview"
                bind:loadViewAnimationFade="@{true}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:textColorHint="@color/colorAccent"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:hasLoginError="@{loginViewModel.email.valueStatus}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/email_white_24dp"
                            android:drawablePadding="10dp"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:text="@={loginViewModel.email.value}"
                            bind:onFocusChange="@{loginViewModel.email.onFocusChanged}"
                            android:textColor="@color/colorAccent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:textColorHint="@color/colorAccent"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
                        bind:hasLoginError="@{loginViewModel.password.valueStatus}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/lock_white_24dp"
                            android:drawablePadding="10dp"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:text="@={loginViewModel.password.value}"
                            bind:onFocusChange="@{loginViewModel.password.onFocusChanged}"
                            android:textColor="@color/colorAccent" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                    app:layout_constraintVertical_weight="1">

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/login_button"
                        style="@style/button"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/custom_rounded_corners"
                        android:elevation="2dp"
                        android:onClick="@{() -> loginViewModel.onSignInClick()}"
                        android:stateListAnimator="@null"
                        android:text="@string/log_in"
                        android:textColor="@android:color/white"
                        android:transitionName="login_button"
                        android:translationZ="20dp"
                        app:finalCornerAngle="50dp"
                        app:initialCornerAngle="40dp"
                        app:layout_constraintBottom_toTopOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.13999999"
                        app:spinning_bar_color="#FFFFFF"
                        app:spinning_bar_padding="2dp"
                        app:spinning_bar_width="3dp"
                        bind:loadViewAnimation="@{true}" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/signUp_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="0.7"
                        app:layout_constraintStart_toStartOf="parent" />

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/signUp_button"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="56dp"
                        android:layout_marginEnd="56dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/custom_rounded_corners"
                        android:elevation="2dp"
                        android:onClick="@{() -> loginViewModel.moveToSignUp()}"
                        android:stateListAnimator="@null"
                        android:text="@string/sign_up"
                        android:textColor="@android:color/white"
                        android:transitionName="login_button"
                        android:translationZ="20dp"
                        app:finalCornerAngle="50dp"
                        app:initialCornerAngle="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:spinning_bar_color="#FFFFFF"
                        app:spinning_bar_padding="2dp"
                        app:spinning_bar_width="3dp"
                        bind:loadViewAnimation="@{true}" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
